k8-config/cluster-ip-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-cluster-ip
spec:
  type: ClusterIP
  ports:
    # other objects can reach via this port
    - port: 4000
      # this is the exposeed port within the object / container
      targetPort: 4000
  selector:
    component: api
