k8-config/cluster-ip-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-cluster-ip
spec:
  type: ClusterIP
  ports:
    # other objects can reach via this port
    - port: 3000
      # this is the exposeed port within the object / container
      targetPort: 3000
  selector:
    component: web
